# anlp_final

./: .gitignore  README.md  aggregate_unified_results.py  pyproject.toml  run_ablation.py  run_eval_direct.py  run_experiments.py  run_lave_sdsd_compare.py  run_unified_benchmark.py  run_unified_benchmark.sh
bench/: compare_results.py  eval_results.py  functional_metrics.py  modal_dgrammar_bench.py  modal_lave_bench.py  run_dgrammar_timed.py  run_lave_timed.py  show_instances.py
dgrammar/: dp_generate.py
docs/: ABLATION_EXPERIMENT_DESIGN.md  DATASET_DOWNLOAD_GUIDE.md  Final_Poster.pptx  plan.md  static_alignment.md
results/: ablation_results.json  benchmark_results.txt  comparison.md  dp_jsb_medium_s0_t128.jsonl  dp_jsb_medium_s0_t128_gl512.jsonl  dp_jsb_medium_s0_t128_gl512_dc.jsonl  dp_jsb_medium_s0_t128_gl512_full.jsonl  dp_jsb_medium_s0_t128_gl512_sb.jsonl  dp_jsb_medium_s0_t128_gr.jsonl  dp_jsb_medium_s0_t128_gr2.jsonl  dp_jsb_medium_s0_t128_off132_rerun.jsonl  dp_jsb_medium_s0_t128_off198_rerun.jsonl  dp_jsb_medium_s0_t128_off264_rerun.jsonl  dp_jsb_medium_s0_t128_off330_rerun.jsonl  dp_jsb_medium_s0_t128_off396_rerun.jsonl  dp_jsb_medium_s0_t128_off462_rerun.jsonl  dp_jsb_medium_s0_t128_off528_rerun.jsonl  dp_jsb_medium_s0_t128_off66_rerun.jsonl  dp_jsb_medium_s0_t128_pwdp.jsonl  dp_jsb_medium_s0_t128_rerun.jsonl  experiment_results.json  lave_combined_timed_jsb_hard_s0_t128_off5.jsonl  lave_combined_timed_jsonschema_s0_t128.jsonl  lave_dir1_timed_jsonschema_s0_t128.jsonl  lave_fn_detection_jsonschema_s0_t128_oml12.jsonl  lave_timed_jsb_hard_s0_t128.jsonl  (+3 more)
(+52 files in other folders)
