[project]
name = "sdsd"
version = "0.1.0"
description = "Sparse Deterministic Speculative Decoding"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.5.0",
    "llguidance>=1.3.0",
    "nvitop>=1.6.2",
    "torch>=2.8.0",
    "tqdm>=4.67.3",
    "transformers>=4.57.6",
]

# Install ONE of these (mutually exclusive due to transformers version):
#   uv sync --extra dream   OR   uv pip install -r requirements-llada.txt
[project.optional-dependencies]
dream = [
    "torch>=2.5",
    "transformers>=4.46",
]
